Fix moving keyframes beyond last column of the timeline

BUG: 372605